@@ -1,14 +1,21 @@
 {
-  "timestamp" : "2022-05-28T01:52:10Z",
+  "timestamp" : "2022-06-10T02:01:19Z",
   "count_outdated" : 35,
   "uniques_outdated" : 7,
-  "count" : 36,
-  "uniques" : 8,
+  "count" : 38,
+  "uniques" : 9,
   "views" : [
     {
       "timestamp": "2022-05-27T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-09T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
